--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   text-align: center;
 }
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -16,7 +16,7 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
+} */
 
 @keyframes logo-spin {
   from {
@@ -39,4 +39,40 @@
 
 .read-the-docs {
   color: #888;
+}
+
+/* App Layout */
+.products-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minx(250px, 1fr));
+  gap: 1.5rem;
+  margin-top: 2rem;
+  padding: 1rem;
+}
+
+/* Product Card */
+.product.item {
+  background-color: burlywood;
+  border: 1px solid #000000;
+  border-radius: 12px;
+  padding: 1.5rem;
+  box-shadow: 0 4px 8px rgba(143, 101, 59, 0.1);
+}
+
+/* Text Style */
+.product-item h2 {
+  font-size: 1.25rem;
+  color: burlywood;
+  margin-bottom: 0.5rem;
+}
+
+.product-item .price {
+  font-weight: bold;
+  color: brown;
+  margin-bottom: 0.5rem;
+}
+
+.product-item .description {
+  font-size: 0.9rem;
+  color: rgb(0, 0, 0);
 }
